[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgrid"
version = "0.1.0"
description = "AgentGrid - Open infrastructure for production AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Shivam Sharma", email = "shivam@example.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "structlog>=23.0,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]
memory = [
    "aiosqlite>=0.20,<1.0",
]
http = [
    "httpx>=0.27,<1.0",
]
all = [
    "agentgrid[memory,http]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentgrid"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentgrid"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=agentgrid --cov-report=term-missing"
